--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+select.c-month-picker {
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif;
+}
